--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
