--- a/package.json
+++ b/package.json
@@ -3,21 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@googlemaps/js-api-loader": "^1.16.2",
     "@googlemaps/markerclusterer": "^2.5.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.15.0",
+    "@mui/material": "^5.15.0",
+    "@reach/combobox": "^0.18.0",
+    "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^0.4.1",
     "bootstrap": "^5.3.2",
-    "react": "^18.2.0",
+    "framer-motion": "^10.16.16",
+    "google-maps-react": "^2.0.6",
+    "react": "^18.0.0",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18.2.0",
+    "react-combobox": "^0.1.2",
+    "react-dom": "^18.0.0",
+    "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.3",
     "styled-components": "^6.1.1",
+    "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
@@ -51,7 +64,7 @@
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.11",
     "postcss": "^8.4.16",
-    "react-icons": "^4.4.0",
+    "react-icons": "^4.12.0",
     "swiper": "^8.4.2",
     "tailwindcss": "^3.3.6"
   }
