--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4",
