--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "react-combobox": "^0.1.2",
     "react-dom": "^18.0.0",
     "react-google-maps": "^9.4.5",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
+    "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "use-places-autocomplete": "^4.0.1",
