--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-combobox": "^0.1.2",
     "react-dom": "^18.0.0",
     "react-google-maps": "^9.4.5",
+    "react-hook-form": "^7.49.3",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
