--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.0",
+    "@mui/lab": "^5.0.0-alpha.161",
     "@mui/material": "^5.15.0",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.19.2",
