--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -14,8 +14,10 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.0",
+    "@mui/joy": "^5.0.0-beta.24",
     "@mui/lab": "^5.0.0-alpha.161",
     "@mui/material": "^5.15.0",
+    "@mui/x-date-pickers": "^6.19.2",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.19.2",
     "@testing-library/jest-dom": "^5.17.0",
@@ -25,17 +27,22 @@
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.16",
     "google-maps-react": "^2.0.6",
+    "granim": "^2.0.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.9.1",
     "react-combobox": "^0.1.2",
     "react-dom": "^18.0.0",
     "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.49.3",
+    "react-international-phone": "^4.2.1",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.3",
+    "react-step-progress-bar": "^1.0.3",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
     "react-webcam": "^7.2.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
