--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
     "react-webcam": "^7.2.0",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "use-places-autocomplete": "^4.0.1",
