--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-amplify/cli": "^12.10.1",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -24,6 +25,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^0.4.1",
+    "amazon-kinesis-video-streams-webrtc": "^2.2.0",
+    "aws-sdk": "^2.1574.0",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.16",
     "google-maps-react": "^2.0.6",
@@ -35,6 +38,7 @@
     "react-google-maps": "^9.4.5",
     "react-hook-form": "^7.49.3",
     "react-international-phone": "^4.2.1",
+    "react-kinesis-webrtc": "^0.3.0",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
@@ -48,6 +52,7 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "use-places-autocomplete": "^4.0.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
