--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/x-date-pickers": "^6.19.2",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.19.2",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
