Admin Dashboard Widgets created

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^10.16.16",
     "google-maps-react": "^2.0.6",
     "granim": "^2.0.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.9.1",
     "react-combobox": "^0.1.2",
@@ -51,6 +52,7 @@
     "react-swipeable-views-utils": "^0.14.0",
     "react-webcam": "^7.2.0",
     "react-youtube": "^10.1.0",
+    "recharts": "^2.12.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "use-places-autocomplete": "^4.0.1",
