--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/x-date-pickers": "^6.19.2",
     "@reach/combobox": "^0.18.0",
     "@react-google-maps/api": "^2.19.2",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -55,6 +57,7 @@
     "recharts": "^2.12.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
+    "three": "^0.163.0",
     "use-places-autocomplete": "^4.0.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
