--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-webcam": "^7.2.0",
     "react-youtube": "^10.1.0",
     "recharts": "^2.12.5",
+    "reconnecting-websocket": "^4.4.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.1",
     "three": "^0.163.0",
