--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
