--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/cli": "^12.10.1",
+    "@aws-sdk/client-kinesis-video": "^3.577.0",
+    "@aws-sdk/client-kinesis-video-media": "^3.577.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -29,8 +31,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^0.4.1",
-    "amazon-kinesis-video-streams-webrtc": "^2.2.0",
-    "aws-sdk": "^2.1574.0",
+    "amazon-kinesis-video-streams-webrtc": "^2.2.1",
+    "aws-sdk": "^2.1623.0",
     "bootstrap": "^5.3.2",
     "date-fns": "^3.6.0",
     "framer-motion": "^10.16.16",
