--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "framer-motion": "^10.16.16",
     "google-maps-react": "^2.0.6",
     "granim": "^2.0.0",
+    "leaflet-draw": "^1.0.4",
     "qrcode.react": "^3.1.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.9.1",
@@ -47,6 +48,7 @@
     "react-hook-form": "^7.49.3",
     "react-international-phone": "^4.2.1",
     "react-kinesis-webrtc": "^0.3.0",
+    "react-leaflet-draw": "^0.20.4",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
@@ -55,6 +57,7 @@
     "react-step-progress-bar": "^1.0.3",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
+    "react-typed": "^2.0.12",
     "react-webcam": "^7.2.0",
     "react-youtube": "^10.1.0",
     "recharts": "^2.12.5",
