--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "react-hook-form": "^7.49.3",
     "react-international-phone": "^4.2.1",
     "react-kinesis-webrtc": "^0.3.0",
+    "react-leaflet-cluster": "^2.1.0",
     "react-leaflet-draw": "^0.20.4",
+    "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-player": "^2.14.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
